--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -44,9 +44,22 @@
   --primary-900: var(--blue-color-900);
 }
 
+.news-body h1 {
+  font-family: 'Times New Roman', 'Georgia', 'Cambria', 'Times New Roman', 'serif';
+  font-size: 3rem;
+  margin-top: 36px;
+}
+
+.news-body h2 {
+  font-family: 'Times New Roman', 'Georgia', 'Cambria', 'Times New Roman', 'serif';
+  font-size: 2.5rem;
+  margin-top: 36px;
+}
+
 .news-body h3 {
   font-family: 'Times New Roman', 'Georgia', 'Cambria', 'Times New Roman', 'serif';
   font-size: 2rem;
+  margin-top: 36px;
 }
 
 .news-body h4 {
@@ -54,6 +67,19 @@
   font-size: 1.5rem;
   font-weight: 800;
   margin-top: 24px;
+  margin-top: 36px;
+}
+
+.news-body h5 {
+  font-family: 'Times New Roman', 'Georgia', 'Cambria', 'Times New Roman', 'serif';
+  font-size: 1.2rem;
+  margin-top: 36px;
+}
+
+.news-body h6 {
+  font-family: 'Times New Roman', 'Georgia', 'Cambria', 'Times New Roman', 'serif';
+  font-size: 1.2rem;
+  margin-top: 36px;
 }
 
 .news-body hr {
